samples/_failures_safe/1761210549_765a8c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38583464.c:160: error: expected ‘;’, ‘,’ or ‘)’ at end of input
